delete and re-install package-lock file

--- a/config/config.json
+++ b/config/config.json
@@ -6,6 +6,12 @@
     "host": "localhost",
     "dialect": "mysql"
   },
+  "test": {
+    "username": "root",
+    "password": null,
+    "database": "database_test",
+    "host": "127.0.0.1",
+    "dialect": "mysql"
 
   "production": {
     "username": "fhvw5s4q9jgo31so",
