--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
   },
   "homepage": "https://github.com/NuzhatSiddiqi/burger3#readme",
   "dependencies": {
+    "balanced-match": "^1.0.0",
+    "es": "^0.7.3",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "mysql": "^2.17.1",
-    "mysql2": "^1.6.5"
+    "mysql2": "^1.6.5",
+    "todo": "^1.1.0",
+    "y": "^0.3.2"
   }
 }
